--- a/page.css
+++ b/page.css
@@ -36371,6 +36371,8 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-image-1 {
   width: 57px;
   height: 57px;
+  background-image: url("images/homstor.gif");
+  background-position: 50% 50%;
   margin: 8px auto 7px 0;
 }
 
@@ -36417,3 +36419,529 @@ a.u-link.u-text-hover-grey-90:hover {
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
  /*end-variables base-font-size*/
+ .u-section-1 {
+  background-image: none;
+}
+
+.u-section-1 .u-sheet-1 {
+  min-height: 807px;
+}
+
+.u-section-1 .u-image-1 {
+  width: 784px;
+  height: 588px;
+  margin: 100px auto 0 123px;
+}
+
+.u-section-1 .u-group-1 {
+  width: 556px;
+  min-height: 261px;
+  margin: -153px 0 0 auto;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px 50px 4px;
+}
+
+.u-section-1 .u-text-1 {
+  font-weight: 700;
+  font-size: 1.875rem;
+  margin: 0;
+}
+
+.u-section-1 .u-text-2 {
+  line-height: 1.8;
+  margin: 27px 0 0;
+}
+
+.u-section-1 .u-btn-1 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-style: none;
+  background-image: none;
+  margin: 20px auto 0 0;
+}
+
+.u-section-1 .u-shape-1 {
+  width: 204px;
+  height: 204px;
+  background-image: none;
+  margin: -746px auto 0 0;
+}
+
+.u-section-1 .u-image-2 {
+  width: 232px;
+  height: 232px;
+  background-image: url("images/perfectCookie.png");
+  background-position: 50% 50%;
+  margin: -218px auto 528px -14px;
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 759px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 720px;
+    height: 540px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-group-1 {
+    margin-top: -105px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 624px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 540px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 540px;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 474px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 340px;
+    height: 255px;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 340px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.25rem;
+  }
+} .u-section-2 {
+  background-image: none;
+  min-height: 806px;
+}
+
+.u-section-2 .u-text-1 {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-style: normal;
+  margin: 164px 162px 0;
+}
+
+.u-section-2 .u-text-2 {
+  text-transform: none;
+  font-weight: 600;
+  font-size: 3rem;
+  margin: 27px 162px 0;
+}
+
+.u-section-2 .u-shape-1 {
+  height: 202px;
+  margin-top: 128px;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-list-1 {
+  width: 976px;
+  margin: -281px auto 59px;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-template-columns: repeat(3, calc(33.3333% - 18px));
+  min-height: 426px;
+  grid-gap: 27px;
+}
+
+.u-section-2 .u-list-item-1 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 13px 20px;
+}
+
+.u-section-2 .u-image-1 {
+  height: 206px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-3 {
+  font-weight: 700;
+  margin: 27px 0 0;
+}
+
+.u-section-2 .u-text-4 {
+  font-size: 1.125rem;
+  margin: 14px 0 0;
+}
+
+.u-section-2 .u-btn-1 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-style: solid;
+  background-image: none;
+  margin: 14px auto 0;
+}
+
+.u-section-2 .u-list-item-2 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 13px 20px;
+}
+
+.u-section-2 .u-image-2 {
+  height: 206px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-5 {
+  font-weight: 700;
+  margin: 27px 0 0;
+}
+
+.u-section-2 .u-text-6 {
+  font-size: 1.125rem;
+  margin: 14px 0 0;
+}
+
+.u-section-2 .u-btn-2 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-style: solid;
+  background-image: none;
+  margin: 14px auto 0;
+}
+
+.u-section-2 .u-list-item-3 {
+  background-image: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 13px 20px;
+}
+
+.u-section-2 .u-image-3 {
+  height: 206px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-7 {
+  font-weight: 700;
+  margin: 27px 0 0;
+}
+
+.u-section-2 .u-text-8 {
+  font-size: 1.125rem;
+  margin: 14px 0 0;
+}
+
+.u-section-2 .u-btn-3 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-style: solid;
+  background-image: none;
+  margin: 14px auto 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    margin-left: 62px;
+    margin-right: 62px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 62px;
+    margin-right: 62px;
+  }
+
+  .u-section-2 .u-list-1 {
+    width: 940px;
+    margin-left: calc(((100% - 940px) / 2));
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 351px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 197px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 197px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 197px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-list-1 {
+    width: 720px;
+    margin-left: calc(((100% - 720px) / 2));
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(2, calc(50% - 13.5px));
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 231px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 231px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 231px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-list-1 {
+    width: 540px;
+    margin-left: calc(((100% - 540px) / 2));
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(1, 100%);
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding: 30px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 375px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding: 30px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 375px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding: 30px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 375px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-2 {
+    font-size: 2.25rem;
+  }
+
+  .u-section-2 .u-list-1 {
+    width: 340px;
+    margin-left: calc(((100% - 340px) / 2));
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 231px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 231px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 231px;
+  }
+} .u-section-3 {
+  background-image: none;
+  min-height: 967px;
+}
+
+.u-section-3 .u-shape-1 {
+  height: 228px;
+  margin-top: 204px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-image-1 {
+  height: 515px;
+  width: 912px;
+  margin: -371px auto 0 calc(((100% - 1140px) / 2) + 114px);
+}
+
+.u-section-3 .u-text-1 {
+  margin: 45px 297px 0 298px;
+}
+
+.u-section-3 .u-text-2 {
+  line-height: 1.8;
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin: 22px 297px 0 298px;
+}
+
+.u-section-3 .u-btn-1 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-style: solid;
+  background-image: none;
+  margin: 20px auto 60px calc(((100% - 1140px) / 2) + 502px);
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-image-1 {
+    height: 457px;
+    width: 810px;
+    margin-left: calc(((100% - 1140px) / 2) + 165px);
+  }
+
+  .u-section-3 .u-text-1 {
+    width: 645px;
+    margin-right: calc(((100% - 1140px) / 2) + 248px);
+    margin-left: calc(((100% - 1140px) / 2) + 248px);
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 645px;
+    margin-left: calc(((100% - 1140px) / 2) + 248px);
+    margin-right: calc(((100% - 1140px) / 2) + 248px);
+  }
+}
+
+@media (max-width: 991px) {
+   .u-section-3 {
+    min-height: 859px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    margin-top: 155px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 383px;
+    width: 613px;
+    margin-top: -299px;
+    margin-left: calc(((100% - 1140px) / 2) + 264px);
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-top: 55px;
+  }
+}
+
+@media (max-width: 767px) {
+   .u-section-3 {
+    min-height: 757px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    margin-top: 204px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 306px;
+    width: 456px;
+    margin-top: -371px;
+    margin-left: calc(((100% - 1140px) / 2) + 342px);
+  }
+
+  .u-section-3 .u-text-1 {
+    width: 540px;
+    margin-top: 45px;
+    margin-left: calc(((100% - 1140px) / 2) + 300px);
+    margin-right: calc(((100% - 1140px) / 2) + 300px);
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 540px;
+    margin-left: calc(((100% - 1140px) / 2) + 300px);
+    margin-right: calc(((100% - 1140px) / 2) + 300px);
+  }
+}
+
+@media (max-width: 575px) {
+   .u-section-3 {
+    min-height: 644px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    height: 81px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 180px;
+    width: 285px;
+    margin-left: calc(((100% - 1140px) / 2) + 428px);
+  }
+
+  .u-section-3 .u-text-1 {
+    width: 340px;
+    margin-left: calc(((100% - 1140px) / 2) + 400px);
+    margin-right: calc(((100% - 1140px) / 2) + 400px);
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 340px;
+    margin-left: calc(((100% - 1140px) / 2) + 400px);
+    margin-right: calc(((100% - 1140px) / 2) + 400px);
+  }
+}
