--- a/tetris/css/styles.css
+++ b/tetris/css/styles.css
@@ -13,7 +13,7 @@ body{
 	margin:0;
 	padding:0;
 	position: relative;
-      font-family: "Lucida Console", monospace; 
+	font-family: 'American Typewriter','Marker Felt';
 
 }
 
