--- a/tetris/css/styles.css
+++ b/tetris/css/styles.css
@@ -13,7 +13,7 @@ body{
 	margin:0;
 	padding:0;
 	position: relative;
-	font-family: 'Marker Felt','American Typewriter';
+	font-family: "Lucida Console", monospace;
 
 }
 
@@ -92,7 +92,7 @@ body{
 
 #score{
 	color:orange;
-	font-family: 'Chalkboard SE';
+	font-family: "Lucida Console", monospace;
 }
 
 #rewardInfo{
