--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -1,3 +1,18 @@
+
+.ai-button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+  display: block;
+  text-align: center;
+  float: center; 
+}
+
 @import url(fonts/clear-sans.css);
 html, body {
   margin: 0;
