--- a/gba/main.css
+++ b/gba/main.css
@@ -19,7 +19,7 @@ span {
     position: absolute;
     right: 0px;
     display: none;
-    font-size: 40px;
+    font-size: 40pt;
     font-weight: bold;
     text-align: center;
     vertical-align: bottom;
