--- a/gba/main.css
+++ b/gba/main.css
@@ -15,6 +15,10 @@ canvas {
 }
 span {
     color: deepskyblue;
+    bottom: 0px;
+    position: absolute;
+    right: 0px;
+    display: none;
     font-size: 50pt;
     font-weight: bold;
     text-align: center;
